--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
----
-layout: default
----
-  
 <!doctype html>
 <html>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#about-me">About Me</a>
+    <a href="#l-projects">Large Projects</a>
+    <a href="#s-projects">Small Projects</a>
+  </div>  
   <head>
     <title>This is the title of the webpage!</title>
   </head>
