--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="#s-projects">Small Projects</a>
   </div>  
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Gabriel Hayes - Game Dev</title>
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
