--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  <link rel="stylesheet" href="styles.css">
   <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="#about-me">About Me</a>
