--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Gabriel Hayes - Game Dev</title>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="#about-me">About Me</a>
     <a href="#l-projects">Large Projects</a>
     <a href="#s-projects">Small Projects</a>
-  </div>  
-  <head>
-    <title>Gabriel Hayes - Game Dev</title>
-  </head>
+  </div>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
