--- a/about-me.html
+++ b/about-me.html
@@ -6,8 +6,8 @@
   <title>Gabriel Hayes - Game Dev</title>
 
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="./about-me.html">About Me</a>
+    <a href="./index.html">Home</a>
+    <a class="active" href="./about-me.html">About Me</a>
     <a href="./l-projects.html">Large Projects</a>
     <a href="./s-projects.html">Small Projects</a>
   </div>
