--- a/s-project.html
+++ b/s-project.html
@@ -6,10 +6,10 @@
   <title>Gabriel Hayes - Game Dev</title>
 
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a href="./index.html">Home</a>
     <a href="./about-me.html">About Me</a>
     <a href="./l-projects.html">Large Projects</a>
-    <a href="./s-projects.html">Small Projects</a>
+    <a class="active" href="./s-projects.html">Small Projects</a>
   </div>
 
   <body>
