--- a/l-projects.html
+++ b/l-projects.html
@@ -12,6 +12,25 @@
     <a href="./s-projects.html">Small Projects</a>
   </div>
 
+  <button class="tablink" onclick="openPage('COE Mods', this, 'red')" id="defaultOpen">COE Mods</button>
+  <button class="tablink" onclick="openPage('Note Taker', this, 'green')">Note Taker</button>
+  <button class="tablink" onclick="openPage('Derelict', this, 'blue')">Derelict</button>
+  
+  <div id="Conquest-of-Elysium" class="tabcontent">
+    <h3>COE Mods</h3>
+    <p>Content goes here</p>
+  </div>
+  
+  <div id="Note-Taker" class="tabcontent">
+    <h3>Note Taker</h3>
+    <p>Content goes here</p>
+  </div>
+  
+  <div id="Derelict" class="tabcontent">
+    <h3>Derelict</h3>
+    <p>Content goes here</p>
+  </div>
+
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
