--- a/l-projects.html
+++ b/l-projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
+  <script src="l-projects.js"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Gabriel Hayes - Game Dev</title>
 
