--- a/l-projects.html
+++ b/l-projects.html
@@ -13,16 +13,16 @@
     <a href="./s-projects.html">Small Projects</a>
   </div>
 
-  <button class="tablink" onclick="openPage('COE Mods', this, 'red')" id="defaultOpen">COE Mods</button>
-  <button class="tablink" onclick="openPage('Note Taker', this, 'green')">Note Taker</button>
+  <button class="tablink" onclick="openPage('COE', this, 'red')" id="defaultOpen">COE Mods</button>
+  <button class="tablink" onclick="openPage('NoteTaker', this, 'green')">Note Taker</button>
   <button class="tablink" onclick="openPage('Derelict', this, 'blue')">Derelict</button>
   
-  <div id="Conquest-of-Elysium" class="tabcontent">
+  <div id="COE" class="tabcontent">
     <h3>COE Mods</h3>
     <p>Content goes here</p>
   </div>
   
-  <div id="Note-Taker" class="tabcontent">
+  <div id="NoteTaker" class="tabcontent">
     <h3>Note Taker</h3>
     <p>Content goes here</p>
   </div>
