--- a/l-projects.html
+++ b/l-projects.html
@@ -13,8 +13,8 @@
     <a href="./s-projects.html">Small Projects</a>
   </div>
 
-  <button class="tablink" onclick="openPage('COE', this, 'red')" id="defaultOpen">COE</button>
-  <button class="tablink" onclick="openPage('NoteTaker', this, 'green')">NoteTaker</button>
+  <button class="tablink" onclick="openPage('COE', this, 'red')" id="defaultOpen">COE Mods</button>
+  <button class="tablink" onclick="openPage('NoteTaker', this, 'green')">Note Taker</button>
   <button class="tablink" onclick="openPage('Derelict', this, 'blue')">Derelict</button>
   
   <div id="COE" class="tabcontent">
