--- a/l-projects.html
+++ b/l-projects.html
@@ -13,7 +13,7 @@
     <a href="./s-projects.html">Small Projects</a>
   </div>
 
-    <button class="tablink" onclick="openPage('COE', this, 'red')" id="defaultOpen">COE Mods</button>
+    <button class="tablink" onclick="openPage('COE', this, 'red')">COE Mods</button>
     <button class="tablink" onclick="openPage('NoteTaker', this, 'green')">Note Taker</button>
     <button class="tablink" onclick="openPage('Derelict', this, 'blue')">Derelict</button>
     
