--- a/l-projects.html
+++ b/l-projects.html
@@ -18,8 +18,52 @@
     <button class="tablink" onclick="openPage('Derelict', this, 'blue')">Derelict</button>
     
     <div id="COE" class="tabcontent">
-        <h3>COE Mods</h3>
-        <p>Content goes here</p>
+        <h3>Conquest of Elysium Mods</h3>
+        <p>
+          Conquest of Elysium, a game developed by Illwinter Games is a quick, turned based fantasy game full of depth, details, and monsters. This game is very niche, but very clever and lends itself to modding, using a simple markdown language.
+          I encourage you to go take a look at it and read more on it to better understand the mods I've made for it. You can find it <a href="https://store.steampowered.com/app/1606340/Conquest_of_Elysium_5/">here</a>.
+        </p>
+        <p>
+          With the game being so ready to mod, I decided to take a crack at it with a close friend. We ended up developing two mods for the game that have found surprising popularity.
+        </p>
+
+        <div class="split left">
+          <div class="centered">
+            <img src="Images\spartan_kings.jpg" alt="Spartan Kings Cover Art">
+            <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2917056153">Spartan Kings></a></h2>
+            <p>
+              This mod adds the custom Spartan Kings class, based on Spartan history and Greek mythology. More popular than the Desperado mod, this mod is based on the real historical Greek Polis of Sparta.
+              Inspired by their Diarchy, this class has two main rulers and an army of spartan hoplites who rise through the ranks getting stronger and stronger. You can begin to worship various gods of mythology
+              to gain greater powers and access to monstrous creatures such as the Nemean Lion, Medusa, and the Mares of Diomedes. Additionally it adds various monsters and gods roaming Elysium of which to beware or utilize.
+            </p>
+            <p>
+              This is clearly the more popular of the two mods I have been a part of producing which I believe due to being just a better fit for the overall theme of the game. As of now (10/14/24) the mod has nearly 2,000 views and nearly 1,000 subscriptions.
+              With a game that averages roughly 100-200 players on average on a good week, this is one of the more popular mods for the game, landing itself on the second page of steam's most popular category.
+            </p>
+            <p>
+              This mod is a great showcase for making history engaging as well as working around constraints. The biggest example would be for the Trojan Horse. If you choose to worship Athena, she gives you access to the Trojan Horse of mythology.
+              We originally made this as a way to help the Spartan Kings overcome their lack of siege ability and it was meant to spawn behind enemy walls and summon hoplites. The problem was, there was no functionality for that in the game.
+              We worked around that by utilizing different functions to replicate what we wanted. The end result worked perfectly for what we wanted and is a strong point for balancing the class.
+            </p>
+          </div>
+        </div>
+
+        <div class="split right">
+          <div class="centered">
+            <img src="Images\desperado.jpg" alt="Desperado Cover Art">
+            <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2809529348">Desperado</a></h2>
+            <p>
+              This mod adds the custom Desperado class, a class based on the Wild West and its mythology. Not as popular as the Spartan Kings mod, this mod is based on the oft romanticised Wild West. It includes
+              not only cowboys, but also real famous figures such as Calamity Jane and Annie Oakley, western myths like Buffalo Bill and Paul Bunyan, and some new legends made just for this mod. This mod was much more ambitious than the Spartan Kings mod
+              as it was meant to allow players to build up towns with various buildings surrounding a saloon that each gave different bonuses to the player. Additionally, the player will eventually get a large, armored train that roams the map, but the player needs to 
+              build infrastructure to allow it to travel freely.
+            </p>
+            <p>
+              Again, this mod was not as popular as the Spartan Kings mod, but certainly found a place amongst the other mods for the game. I believe it's lack of popularity is mostly due to how grounded it feels. In a game with monsters, gates to Hell, and a biblical rapture,
+              cowboys can feel a less intersting pick. As of now (10/14/24) the mod has nearly 1000 visitors with a little under 300 subscriptions.
+            </p>
+          </div>
+        </div>
     </div>
     
     <div id="NoteTaker" class="tabcontent">
