--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Gabriel Hayes - Game Dev</title>
+  <title>Gabriel Hayes - Portfolio</title>
 
   <div class="topnav">
     <a class="active" href="#home">Home</a>
