--- a/l-projects.html
+++ b/l-projects.html
@@ -38,7 +38,7 @@
             <div class="left">
               <div class="centered">
                 <img src="Images\spartan_kings.jpg" alt="Spartan Kings Cover Art">
-                <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2917056153">Spartan Kings</a></h2>
+                <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2917056153" style="color: skyblue">Spartan Kings</a></h2>
                 <p>
                   This mod adds the custom Spartan Kings class, based on Spartan history and Greek mythology. More popular than the Desperado mod, this mod is based on the real historical Greek Polis of Sparta.
                   Inspired by their Diarchy, this class has two main rulers and an army of spartan hoplites who rise through the ranks getting stronger and stronger. You can begin to worship various gods of mythology
@@ -63,7 +63,7 @@
             <div class="right">
               <div class="centered">
                 <img src="Images\desperado.jpg" alt="Desperado Cover Art">
-                <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2809529348">Desperado</a></h2>
+                <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2809529348" style="color: skyblue">Desperado</a></h2>
                 <p>
                   This mod adds the custom Desperado class, a class based on the Wild West and its mythology. Not as popular as the Spartan Kings mod, this mod is based on the oft romanticised Wild West. It includes
                   not only cowboys, but also real famous figures such as Calamity Jane and Annie Oakley, western myths like Buffalo Bill and Paul Bunyan, and some new legends made just for this mod. This mod was much more ambitious than the Spartan Kings mod
