--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="./about-me.html">About Me</a>
-    <a href="./l-projects.html">Large Projects</a>
-    <a href="./s-projects.html">Small Projects</a>
+    <a href="./projects.html">Projects</a>
   </div>
 
   <body>
